2000-01-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/ColorUtils.c:
	added some colour caching logic; will fail miserably if used with a
	non-default colour map

	* fvwm/menus.c (MenuInteraction):
	prevent some unnecessary menu animations

	* fvwm/update.c:
	removed debug code

	* fvwm/menus.c (MenuInteraction):
	eliminate network traffic in idle menus

	* fvwm/style.c (ProcessNewStyle):
	fixed unnecessary icon update when style '*' is changed

2000-01-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (check_window_style_change):
	fixed coredump when changind style 'NoIcon' to 'Icon' [the font was not
	updated]

	* fvwm/fvwm.c (Done):
	* fvwm/session.c (RestartInSession):
	call CLosePipes() after CloseICCCM2() because otherwise fvwm might
	ignore map requests while it still has substructureredirect selected on
	the root window ==> windows end up in nirvana

	* fvwm/move_resize.c (DoSnapAttract):
	fixed snapping icons with titles to other icons

1999-01-14  Mikhael Goikhman  <migo@homemail.com>

	* libs/System.c (setPath): fixed expanding '+' not at the end

2000-01-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Picture.c (color_reduce_pixmap):
	-Wall fix

	* fvwm/borders.c (RedrawBorder):
	(SetupFrame):
	* fvwm/fvwm.h (FvwmWindow):
	fixed handle marks on small windows

2000-01-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetupFrame):
	fixed size of corner windows after the windows was very small
	(SetupTitleBar):
	fixed resizing the button windows that resized icons and other parts of
	the window too :-)

	* fvwm/style.c (ProcessNewStyle):
	fixed UseStyle core dump

	* fvwm/screen.h (struct):
	-Wall fix

2000-01-10  Ben Winslow  <rain@insane.loonybin.net>

	* fvwm/gnome.c (GNOME_SetWinArea): Brad applied Ben's patch

2000-01-10  Dan Espen  <dane@mk.telcordia.com>

	* libs/Picture.c (color_reduce_pixmap): Handle xpm with only grayscale
	or monochrome definitions without additional mallocs.

2000-01-09  Dominik Vogt  <dominik.vogt@gmx.de>
