@@ -1,3 +1,9 @@
+2000-01-17  olicha	<olivier.chapuis@free.fr>
+	* fvwm/fvwm.c:
+	Fixed a complet freeze at startup: ungrab the Busy Cursor at startup
+	before the init fuctions are executed. If not, we've got a complet
+	freeze if one of these functions does not finish.
+
 2000-01-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/ColorUtils.c:
